--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "material-design-icons-iconfont": "^3.0.3",
     "roboto-fontface": "*",
@@ -17,7 +18,9 @@
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^0.9.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
